# rust_lambda_mini

./: .gitignore  Cargo.toml  README.md
src/: main.rs
