[package]
name = "lambda_function"
version = "0.1.0"
authors = ["Kuein <kuein@outlook.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_derive = "^1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"